# attention-head-zoo-2-layer-attention-only-transformer

./: CLAUDE.md  README.md  attention-head-zoo-2-layer-attention-only-transformer.ipynb  generate_notebooks.py  pyproject.toml  shared.py
cross/: adjective_to_adjective.ipynb  adjective_to_adverb.ipynb  adjective_to_ai.ipynb  adjective_to_certainty.ipynb  adjective_to_comma.ipynb  adjective_to_conjunction.ipynb  adjective_to_determiner.ipynb  adjective_to_eot.ipynb  adjective_to_glue.ipynb  adjective_to_noun.ipynb  adjective_to_period.ipynb  adjective_to_preposition.ipynb  adjective_to_pronoun.ipynb  adjective_to_questioning.ipynb  adjective_to_salient.ipynb  adjective_to_spooky.ipynb  adjective_to_verb.ipynb  adverb_to_adjective.ipynb  adverb_to_adverb.ipynb  adverb_to_ai.ipynb  adverb_to_certainty.ipynb  adverb_to_comma.ipynb  adverb_to_conjunction.ipynb  adverb_to_determiner.ipynb  adverb_to_eot.ipynb  adverb_to_glue.ipynb  adverb_to_noun.ipynb  adverb_to_period.ipynb  adverb_to_preposition.ipynb  adverb_to_pronoun.ipynb  adverb_to_questioning.ipynb  adverb_to_salient.ipynb  adverb_to_spooky.ipynb  adverb_to_verb.ipynb  ai_to_adjective.ipynb  ai_to_adverb.ipynb  ai_to_ai.ipynb  ai_to_certainty.ipynb  ai_to_comma.ipynb  ai_to_conjunction.ipynb  (+249 more)
heads/: l0h0.ipynb  l0h1.ipynb  l0h10.ipynb  l0h11.ipynb  l0h2.ipynb  l0h3.ipynb  l0h4.ipynb  l0h5.ipynb  l0h6.ipynb  l0h7.ipynb  l0h8.ipynb  l0h9.ipynb  l1h0.ipynb  l1h1.ipynb  l1h10.ipynb  l1h11.ipynb  l1h2.ipynb  l1h3.ipynb  l1h4.ipynb  l1h5.ipynb  l1h6.ipynb  l1h7.ipynb  l1h8.ipynb  l1h9.ipynb
types/: adverb_attention.ipynb  (+39 more)
