[project]
name = "attention-head-zoo-2-layer-attention-only-transformer"
version = "0.1.0"
description = "Attention head zoo: cataloguing attention head types in a 2-layer attention-only transformer"
requires-python = ">=3.12"
dependencies = [
    "circuitsvis>=1.43.3",
    "einops>=0.8.2",
    "eindex-callum @ git+https://github.com/callummcdougall/eindex.git",
    "ipykernel>=7.1.0",
    "jaxtyping>=0.3.5",
    "numpy>=1.26",
    "plotly>=6.5.2",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformer-lens>=2.17.0",
    "nbformat>=5.10.4",
    "itables>=2.7.0",
    "pandas>=2.3.3",
    "nltk>=3.9.2",
]
